--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="../src/public/css/main.css">
 </head>
@@ -29,7 +29,7 @@
         	</div>
         </section>
 
-        <ul class="deck">
+        <!-- <ul class="deck">
             <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
@@ -78,7 +78,7 @@
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
-        </ul>
+        </ul> -->
     </div>
 
 </body>
