--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,15 @@
             <span class="moves">3</span> Moves
 
             <div class="timer">
+                Time
                 <span id="hours">00</span>:
                 <span id="minutes">00</span>:
                 <span id="seconds">00</span>
             </div>
 
-            <!-- <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div> -->
+            <div id="restart" class="restart">
+        		<i class="fas fa-redo"></i>
+        	</div>
         </section>
     </div>
 
