misc css modification

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
             <h1>Matching Game</h1>
         </header>
 
+        <!-- Scoreboard -->
         <section class="score-panel">
-            <select class="themes"></select>
+            <select class="themes form-control"></select>
             <ul class="stars">
                 <li>
                     <i class="fa fa-star"></i>
@@ -41,6 +42,7 @@
             </div>
 
             <div id="restart" class="restart">
+                    Reset
                 <i class="fas fa-redo"></i>
             </div>
         </section>
@@ -62,10 +64,11 @@
                         <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
-
             </div>
         </div>
+
     </div>
+
 </body>
 
 </html>
